--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 html {
@@ -9,34 +12,186 @@ html {
 }
 
 :root {
-    --cor-texto: white;
+    --cor-texto-fundo-preto: white;
+    --cor-texto-fundo-branco: black;
 }
 
 .container-grid {
     display: grid;
-    grid-template-columns: repeat(12 100px);
-    grid-template-rows: auto;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-rows: repeat(10,170px);
 }
 
+/* CABEÇALHO */
+
 header {
-    columns: 1/13;
-    grid-row: 1/2;
+    grid-column: 1/13;
     background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--cor-texto-fundo-preto);
+}
+
+nav {
+    display: flex;
+    justify-content: right;
+    margin-top: 9rem;
 }
 
 nav ul {
     display: flex;
+    list-style: none;
+
+}
+nav ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 nav ul li a {
-    padding: 3rem;
+    padding: 2.5rem;
     list-style: none;
-    font-size: 3rem;
+    font-size: 2rem;
     text-decoration: none;
     color: var(--cor-texto);
+
+    
 }
 
-header h1 {
+nav ul li a:hover {
+    background-color: #3a3a3a;
+}
+
+#titulo-cabecalho{
     color: var(--cor-texto);
-    font-size: 5rem;
+    font-size: 4.5rem;
+}
+
+#logo-cabecalho {
+    max-width: 150px;
+    border-radius: 50%;
+    margin: 1rem 0 1rem 2rem;
+}
+
+
+/* HOME */
+
+.containeir-home {
+    background-image: url(../img/smart-cities.png);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* height: 801px */
+    color: var(--cor-texto-fundo-preto);
+}
+
+main {
+    grid-column: 1/13;
+    grid-row: 2/7;
+    background-image: url(../img/smart-cities.jpg);
+    background-size: 100%;
+    height: 100%;
+    color: var(--cor-texto);
+    background-repeat: no-repeat;
+    max-width: 100%;
+}
+
+#titulo-home {
+    font-size: 7rem;
+    margin-top: 15rem;
+}
+
+#sub-home {
+    font-size: 4rem;
+    width: 120rem;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.btn-projeto {
+    font-size: 2rem;
+    margin-top: 10rem;
+}
+
+.btn-projeto a {
+    color: var(--cor-texto);
+    text-decoration: none;
+    padding: 1.5rem;
+    background-color: rgba(0, 0, 0, 0.541);
+    border-radius: 3rem;
+}
+
+.btn-projeto a:hover {
+    background-color: black;
+    font-size: 2.2rem;
+    transition: 0.2s;
+}
+
+/* PROBLEMA */
+.problema {
+    display: flex;
+    margin: 7rem 0 0 2rem;
+    grid-column: 1/13;
+    gap: 10rem;
+    display: flex;
+}
+
+.container-problema {
+    color: var(--cor-texto-fundo-branco);
+    flex-direction: column;
+}
+
+.fundo-problema {
+    background-color: rgb(218, 101, 101);
+    border-top-left-radius: 15rem;
+    border-bottom-left-radius: 15rem;
+    display: flex;
+    margin-left: 4rem;
+    color: var(--cor-texto-fundo-preto);
+    align-items: center;
+    justify-content: center;
+    text-align: justify;
+    height: 25rem;
+    max-width: 100%;
+}
+
+#titulo-problema {
+    font-size: 4rem;
+}
+
+#sub-problema {
+    font-size: 2rem;
+    width: 60rem;
+    text-align: justify;
+}
+
+.fundo-problema ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.fundo-problema li {
+    font-size: 2rem;
+    padding-right: 2rem;
+    text-align: justify;
+    margin-left: 6rem;
+}
+
+.container-linha {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.linha {
+    width: 100%;
+    background-color: #9c9b9b;
+    height: 1px;
+    grid-row: 9;
+    grid-column: 2/10;
+    margin-top: 5rem;
+
 }
