--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,15 @@ html {
 :root {
     --cor-texto-fundo-preto: white;
     --cor-texto-fundo-branco: black;
+    --cor-verde: green;
+    --cor-rosa: rgb(218, 101, 101);
+    --cor-linnha: #9c9b9b;
 }
 
 .container-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: repeat(10,170px);
+    grid-template-rows: repeat(20,170px);
 }
 
 /* CABEÇALHO */
@@ -83,7 +86,6 @@ nav ul li a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* height: 801px */
     color: var(--cor-texto-fundo-preto);
 }
 
@@ -140,11 +142,10 @@ main {
 
 .container-problema {
     color: var(--cor-texto-fundo-branco);
-    flex-direction: column;
 }
 
 .fundo-problema {
-    background-color: rgb(218, 101, 101);
+    background-color: var(--cor-rosa);
     border-top-left-radius: 15rem;
     border-bottom-left-radius: 15rem;
     display: flex;
@@ -159,6 +160,7 @@ main {
 
 #titulo-problema {
     font-size: 4rem;
+    font-weight: bold;
 }
 
 #sub-problema {
@@ -180,18 +182,164 @@ main {
     margin-left: 6rem;
 }
 
-.container-linha {
+
+.linha1 {
+    width: 100%;
+    background-color: #9c9b9b;
+    height: 1px;
+    grid-row: 9;
+    grid-column: 2/9;
+    margin-top: 12rem;
+
+}
+
+/* SOLUÇÃO */
+
+.solucao {
+    display: flex;
+    margin: 7rem 0 0 2rem;
+    grid-column: 1/13;
+    grid-row: 10;
+    gap: 10rem;
+    display: flex;
+}
+
+.container-solucao {
+    color: var(--cor-texto-fundo-branco);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#titulo-solucao {
+    font-size: 5rem;
+    font-weight: bold;
+}
+
+#sub-solucao {
+    margin-top: 1rem;
+    font-size: 2.5rem;
+    text-align: center;
+    max-width: 170rem;
+}
+
+.containeir-como-funciona-solucao {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.quadrado {
+    max-width: 55rem;
+    width: 100%;
+    max-height: 30rem;
+    height: 100%;
+    margin-top: 5rem;
+    border: 2px solid var(--cor-verde);
+    border-radius: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 5rem;
+}
+
+.quadrado h2 {
+    padding: 0 2rem 0 2rem;
+    margin-top: -3rem;
+    font-size: 2.5rem;
+}
+
+.box-numero {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    border: 2px solid var(--cor-verde);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.linha {
+.numero {
+    font-size: 3rem;
+    color: var(--cor-verde);
+}
+
+.titulo-quadrado {
+    font-size: 4rem;
+}
+
+#titulo-quadrado-1 {
+    margin-top: -10rem;
+}
+
+#box-numero1 {
+    position: relative;
+    left: -23rem;
+    top: 0.5rem;
+}
+
+#titulo-quadrado-2 {
+    font-size: 4.7rem;
+    margin-top: -4rem;
+}
+
+#box-numero2 {
+    position: relative;
+    left: -23rem;
+    top: 1.5rem;
+}
+
+#titulo-quadrado-3 {
+    margin-top: -2.5rem;
+    font-size: 3.5rem;
+}
+
+#box-numero3 {
+    position: relative;
+    left: -23rem;
+    top: 2rem;
+}
+
+#titulo-quadrado-4 {
+    margin-top: -6.5rem;
+    font-size: 4.3rem;
+}
+
+#box-numero4 {
+    position: relative;
+    left: -23rem;
+    top: 1.5rem;
+}
+
+#titulo-quadrado-5{
+    font-size: 4.1rem;
+    margin-top: -5rem;
+}
+
+#box-numero5 {
+    position: relative;
+    left: -23rem;
+    top: 2rem;
+}
+
+#titulo-quadrado-6{
+    font-size: 5rem;
+    margin-top: -5rem;
+}
+
+#box-numero6 {
+    position: relative;
+    left: -23rem;
+    top: 2rem;
+}
+
+.linha2 {
     width: 100%;
     background-color: #9c9b9b;
     height: 1px;
-    grid-row: 9;
-    grid-column: 2/10;
+    grid-row: 16;
+    grid-column: 2/9;
     margin-top: 5rem;
-
 }
