--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ html {
     --cor-verde: green;
     --cor-rosa: rgb(218, 101, 101);
     --cor-linha: #9c9b9b;
+    --tamanho-icone: 100px
 }
 
 .container-grid {
@@ -391,3 +392,87 @@ main {
     grid-column: 1/13;
     grid-row: 23;
 }
+
+.container-vantagens{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+
+}
+
+#titulo-vantagens{
+    font-size: 4rem;
+}
+
+.container-icons{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.icons{
+    border: 1px solid var(--cor-linha);
+    border-radius: 2rem;
+    /* border-right: 1px solid var(--cor-linha);
+    border-left: 1px solid var(--cor-linha); */
+    height: 30rem;
+    width: 30rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.container-icons img {
+    width: var(--tamanho-icone);
+}
+
+#titulo-seguranca {
+    font-size: 5.2rem;
+    margin-top: -7rem;
+}
+
+#titulo-eficiencia {
+    font-size: 5.2rem;
+    margin-top: -7rem;
+}
+
+
+#titulo-precisao {
+    font-size: 5.5rem;
+    margin-top: -7rem;
+}
+
+
+#titulo-simplicidade{
+    font-size: 4.5rem;
+    margin-top: -7rem;
+}
+
+.container-icons p {
+    margin-top: -6rem;
+    font-size: 1.8rem;
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
