--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ nav ul li a:hover {
 }
 
 #logo-cabecalho {
-    max-width: 150px;
+    max-width: 15rem;
     border-radius: 50%;
     margin: 1rem 0 1rem 2rem;
 }
@@ -460,14 +460,68 @@ main {
     text-align: center;
 }
 
+footer{
+    grid-column: 1 / 13;
+    grid-row: 27;
+    background-color: black;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+}
+.textos-rodape{
+    display: flex;
+    justify-content: space-between;
+    /* margin: 5rem; */
+    /* align-items: center; */
+    font-size: 1rem;
 
+}
+.textos-rodape > div {
+    margin: 0 2rem; 
+}
+.titulos-rodape{
+    margin: 1rem 0;
+    font-size: 1.5rem;
+}
+footer img{
+    max-width: 100%;
+    max-height: 12rem;
+    /* height: 20vh; */
+    /* right: 5rem; */
+    /* display: flex; */
+    /* justify-content: center; */
+}
+.contatos{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+.contatos > div{
+    margin: 1rem 0;
+}
+.icons-rodape{
+    font-size: 3rem;
+    display: flex;
+}
+.icons-rodape a i{
+    color: white;
+}
 
+.icons-rodape > a {
+    margin: 0 1rem;
+}
 
-
-
-
-
-
+.botao-contato button{
+    width: 100%;
+    height: 3.5rem;
+    border-radius: 2rem 2rem;
+    background-color: var(--cor-rosa);
+    color: var(--cor-texto-fundo-preto);
+    cursor: pointer;
+}
 
 
 
