--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ html {
 .container-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: repeat(30,170px);
+    grid-template-rows: repeat(26,170px);
 }
 
 /* CABEÇALHO */
@@ -529,4 +529,15 @@ footer img{
 
 
 
-
+@media screen and ( max-width: 1400px){
+    .quadrado{
+        max-width: 35rem;
+        max-height: 25rem;
+    }
+    .quadrado h2{
+        font-size: 1.5rem;
+    }
+    .titulo-quadrado, #titulo-quadrado-2, #titulo-quadrado-3, #titulo-quadrado-4, #titulo-quadrado-5, #titulo-quadrado-6{
+        font-size: 3rem;
+    }
+}
