--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ header {
     width: 5.5rem;
     height: 0.5rem;
     background-color: white;
+    transition: 0.5s;
 }
 
 
@@ -685,6 +686,7 @@ footer img{
         align-items: center;
         flex-direction: column;
         gap: 1rem;
+        cursor: pointer;
     }
 
 }
