--- a/css/style.css
+++ b/css/style.css
@@ -17,20 +17,21 @@ html {
     --cor-verde: green;
     --cor-rosa: rgb(218, 101, 101);
     --cor-linha: #9c9b9b;
-    --tamanho-icone: 100px
+    --tamanho-icone: 100px;
+    --tamanho-icone-mobile: 50px;
 }
 
 .container-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: repeat(26, 170px);
+    grid-template-rows: repeat(24, 170px);
 }
 
 /* =========================================CABEÇALHO ====================================*/
 
 header {
     grid-column: 1/13;
-    background-color: black;
+    background-color: #1d1d1b;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -117,7 +118,7 @@ main {
     grid-row: 2/7;
     background-image: url(../img/smart-cities.jpg);
     background-size: 100%;
-    height: 100%;
+    height: 1000px;
     color: var(--cor-texto);
     background-repeat: no-repeat;
     max-width: 100%;
@@ -156,11 +157,11 @@ main {
 
 /* ==================================PROBLEMA========================= */
 .problema {
-    display: flex;
     margin: 7rem 0 0 2rem;
     grid-column: 1/13;
     gap: 10rem;
     display: flex;
+    /* flex-wrap: wrap; */
 }
 
 .container-problema {
@@ -172,13 +173,12 @@ main {
     border-top-left-radius: 15rem;
     border-bottom-left-radius: 15rem;
     display: flex;
-    margin-left: 4rem;
     color: var(--cor-texto-fundo-preto);
     align-items: center;
     justify-content: center;
     text-align: justify;
     height: 25rem;
-    max-width: 100%;
+    width: 110rem;
 }
 
 #titulo-problema {
@@ -221,7 +221,7 @@ main {
     display: flex;
     margin: 7rem 0 0 2rem;
     grid-column: 1/13;
-    grid-row: 10/16;
+    grid-row: 9/15;
     gap: 10rem;
     display: flex;
 }
@@ -239,7 +239,7 @@ main {
 }
 
 #sub-solucao {
-    margin-top: 1rem;
+    margin-top: -18rem;
     font-size: 2.5rem;
     text-align: center;
     max-width: 170rem;
@@ -249,6 +249,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-top: -20rem;
 }
 
 .quadrado {
@@ -306,84 +307,11 @@ main {
     margin-top: -10rem;
 }
 
-/* #titulo-quadrado-1 {
-    margin-top: -10rem;
-}
-
-#box-numero1 {
-    position: relative;
-    left: -23rem;
-    top: 0.5rem;
-}
-
-#titulo-quadrado-2 {
-    font-size: 4.7rem;
-    margin-top: -4rem;
-}
-
-#box-numero2 {
-    position: relative;
-    left: -23rem;
-    top: 1.5rem;
-}
-
-#titulo-quadrado-3 {
-    margin-top: -2.5rem;
-    font-size: 3.5rem;
-}
-
-#box-numero3 {
-    position: relative;
-    left: -23rem;
-    top: 2rem;
-}
-
-#titulo-quadrado-4 {
-    margin-top: -6.5rem;
-    font-size: 4.3rem;
-}
-
-#box-numero4 {
-    position: relative;
-    left: -23rem;
-    top: 1.5rem;
-}
-
-#titulo-quadrado-5{
-    font-size: 4.1rem;
-    margin-top: -5rem;
-}
-
-#box-numero5 {
-    position: relative;
-    left: -23rem;
-    top: 2rem;
-}
-
-#titulo-quadrado-6{
-    font-size: 5.1rem;
-    margin-top: -5rem;
-}
-
-#box-numero6 {
-    position: relative;
-    left: -23rem;
-    top: 2rem;
-} */
-
-.linha2 {
-    width: 100%;
-    background-color: var(--cor-linha);
-    height: 1px;
-    grid-row: 16;
-    grid-column: 2/9;
-    margin-top: 5rem;
-}
 
 /* ================================================ DEMONSTRAÇÃO ==============================*/
 .demonstracao {
     grid-column: 1/13;
-    grid-row: 17/21;
+    grid-row: 16/20;
     display: flex;
     justify-content: center;
 
@@ -413,20 +341,11 @@ main {
     height: 60rem;
 }
 
-.linha3 {
-    width: 100%;
-    background-color: var(--cor-linha);
-    height: 1px;
-    grid-row: 22;
-    grid-column: 2/9;
-    margin-top: 5rem;
-}
-
 /* ==============================================VANTAGENS=========================================== */
 
 .vantagens {
     grid-column: 1/13;
-    grid-row: 23;
+    grid-row: 21;
 }
 
 .container-vantagens{
@@ -446,6 +365,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    /* flex-direction: column; */
     flex-wrap: wrap;
     gap: 1rem;
 }
@@ -453,45 +373,33 @@ main {
 .icons{
     border: 1px solid var(--cor-linha);
     border-radius: 2rem;
-    /* border-right: 1px solid var(--cor-linha);
-    border-left: 1px solid var(--cor-linha); */
     height: 30rem;
     width: 30rem;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    
 }
 
 .container-icons img {
     width: var(--tamanho-icone);
 }
 
-#titulo-seguranca {
-    font-size: 5.2rem;
-    margin-top: -7rem;
+.icons h1 {
+    font-size: 4rem;
 }
 
-#titulo-eficiencia {
-    font-size: 5.2rem;
-    margin-top: -7rem;
+#icon-precisao img{
+    margin-top: 2rem;
 }
 
-
-#titulo-precisao {
-    font-size: 5.5rem;
-    margin-top: -7rem;
-}
-
-
-#titulo-simplicidade{
-    font-size: 4.5rem;
-    margin-top: -7rem;
+#icon-simplicidade img{
+    margin-top: 2rem;
 }
 
 .container-icons p {
-    margin-top: -6rem;
+    /* margin-top: -6rem; */
     font-size: 1.8rem;
     text-align: center;
 }
@@ -499,8 +407,8 @@ main {
 /* ==============================================================RODAPÉ=========================================== */
 footer{
     grid-column: 1 / 13;
-    grid-row: 27;
-    background-color: black;
+    grid-row: 24;
+    background-color: #1d1d1b;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -579,39 +487,113 @@ footer img{
     }
 } */
 
+
+
+
+@media screen and (max-width: 1684px){
+    #sub-solucao{
+        margin-top: 0;
+    }
+    .containeir-como-funciona-solucao{
+        margin-top: 0;
+    }
+
+    .problema {
+        grid-row: 6;
+    }
+    
+    .solucao {
+        grid-row: 8;
+    }
+
+    .demonstracao{
+        grid-row: 16;
+        margin-top: 10rem;
+    }
+
+    .vantagens{
+        grid-row: 21;
+        margin-top: 10rem;
+    }
+    
+
+    .container-grid {
+        grid-template-rows: repeat(25, 170px);
+    }
+
+    footer {
+        grid-row: 25;
+    }
+
+}
+
+
+
+@media screen and (max-width: 1540px){
+    #titulo-solucao{
+        font-size: 4rem;
+    }
+
+    #sub-solucao{
+        font-size: 2.5rem;
+        width: 120rem;
+    }
+
+    .container-demonstracao h1{
+        font-size: 4.5rem;
+    }
+    
+    .container-demonstracao h2{
+        font-size: 3rem;
+        text-align: center;
+        width: 110rem;
+    }
+
+}
+
+
+
+@media screen and (max-width: 1445px){
+    .fundo-problema ul li {
+        font-size: 1.7rem;
+    }
+    .problema {
+        margin-top: -2rem;
+    }
+}
+
+
+
 @media screen and (max-width: 1280px){
     main {
         grid-row: 2/6;
     }
 
     .problema {
-        grid-row: 5/6;
+        grid-row: 6;
+        margin-top: -8rem;
     }
 
-    .fundo-problema ul li {
-        font-size: 1.7rem;
-    }
+    .demonstracao {
+        grid-row: 15;
+        margin-top: 0;
+    } 
 
-    .linha1 {
-        grid-row: 7/7;
-
-    }
-
-    .linha1,
-    .linha2,
-    .linha3 {
-        width: 85rem;
-        grid-column: 2/5;
+    .vantagens {
+        grid-row: 19;
+        margin-top: 15rem;
     }
 
     .solucao {
-        grid-row: 8;
+        grid-row: 7;
     }
 
-/* TRANFERIR PARA OUTRO MEDIA QUERIE */
+    footer {
+        grid-row: 23;
+    }
+
     #titulo-solucao{
         font-size: 3.8rem;
-        width: 120rem;
     }
 
     #sub-solucao{
@@ -621,16 +603,26 @@ footer img{
 
     .container-demonstracao h1{
     font-size: 4rem;
+    }
+
+    .container-demonstracao h2{
+        font-size: 2.5rem;
+        text-align: center;
+        width: 110rem;
+    }
+
+    .container-grid {
+        grid-template-rows: repeat(23, 170px);
+    }
 }
 
-.container-demonstracao h2{
-    font-size: 2.5rem;
-    text-align: center;
-    width: 110rem;
-}
-}
+
 
 @media screen and (max-width: 1275px) {
+    .fundo-problema ul li {
+        font-size: 1.6rem;
+    }
+    
     #menu-desktop {
         display: none;
     }
@@ -691,3 +683,213 @@ footer img{
 
 }
 
+
+
+@media screen and (max-width: 1244px) {
+    .container-grid {
+        grid-template-rows: repeat(23, 170px);
+    }
+
+    footer {
+        grid-row: 23;
+    }
+
+    #titulo-vantagens{
+        font-size: 3.5rem;
+    }
+
+    .icons{
+        height: 25rem;
+        width: 25rem;
+    }
+    
+    .container-icons img {
+        width: var(--tamanho-icone-mobile);
+    }
+
+}
+
+
+
+@media screen and (max-width: 1214px){
+    .problema {
+        flex-wrap: wrap;
+    }
+    
+    .fundo-problema{
+        margin: -5rem 0 0 10rem;
+    }
+
+    .solucao {
+        grid-row: 8;
+    }
+
+    .demonstracao {
+        grid-row: 16;
+    } 
+
+    .vantagens {
+        grid-row: 19;
+    }
+
+    #titulo-solucao{
+        font-size: 3.2rem;
+    }
+    
+    #sub-solucao{
+        font-size: 1.8rem;
+        width: 100rem;
+    }
+
+    .video-yt {
+        width: 70rem;
+        height: 40rem;
+    }
+
+    .container-demonstracao h1{
+        font-size: 3.5rem;
+    }
+    
+    .container-demonstracao h2{
+        font-size: 2rem;
+        width: 90rem;
+    }
+
+    html {
+        overflow-x: hidden;
+    }
+
+    #titulo-home {
+        font-size: 5rem;
+        margin-top: 10rem;
+    }
+    
+    #sub-home {
+        font-size: 2rem;
+        width: 60rem;
+    }
+    
+    .btn-projeto {
+        margin-top: 4rem;
+    }
+
+
+}
+
+
+
+@media screen and (max-width: 1134px) {
+    .container-grid {
+        grid-template-rows: repeat(21, 170px);
+    }
+
+    footer {
+        grid-row: 21;
+    }
+
+    .demonstracao {
+        grid-row: 14;
+    }
+
+    .vantagens {
+        grid-row: 17;
+    }
+
+
+    .quadrado {
+        max-width: 30rem;
+        max-height: 30rem;
+        margin-top: 5rem;
+        gap: 5rem;
+    }
+    
+    .quadrado h2 {
+        padding: 0 2rem 0 2rem;
+        margin-top: -3rem;
+        font-size: 1.8rem;
+        font-weight: lighter;
+    }
+    
+    .box-numero {
+        width: 3.5rem;
+        height: 3.5rem;
+    }
+    
+    #numero1{
+        top: -8.8rem;
+        left: -12rem;
+    }
+
+    #box-numero2{
+        top: -6.5rem;
+        left: -12rem;
+    }
+
+    #box-numero3{
+        top: -5.5rem;
+        left: -12rem;
+    }
+    
+    #box-numero4{
+        top: -7.5rem;
+        left: -12rem;
+    }
+
+    #box-numero5{
+        top: -6.5rem;
+        left: -12rem;
+    }
+
+    #box-numero6{
+        top: -7.5rem;
+        left: -12rem;
+    }
+    
+    .numero {
+        font-size: 2.5rem;
+    }
+    
+    .titulo-quadrado {
+        font-size: 1.8rem;
+        margin-top: -10rem;
+    }
+
+    #titulo-solucao{
+        font-size: 2.5rem;
+    }
+
+    #sub-solucao{
+        font-size: 2rem;
+        width: 80rem;
+    }
+}
+
+
+@media screen and (max-width: 880px) {
+    #titulo-solucao{
+        width: 60rem;
+        text-align: center;
+    }
+
+    #sub-solucao{
+        width: 60rem;
+    }
+
+.solucao {
+    margin-left: 0;
+}
+}
+
+@media screen and (max-width: 660px) {
+    #titulo-solucao{
+        width: 40rem;
+    }
+
+    #sub-solucao{
+        width: 40rem;
+    }
+
+.solucao {
+    margin-left: 0;
+}
+}
