--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,20 @@ main {
     transition: 0.2s;
 }
 
+.login {
+    width: 8rem;
+    height: 4rem;
+    background-color: var(--cor-rosa);
+    font-size: 2rem;
+    border-radius: 1.2rem;
+    border: 2px solid white;
+    color: white;
+    cursor: pointer;
+    position: relative;
+    top: -5rem;
+    left: -3rem;
+}
+
 /* ==================================PROBLEMA========================= */
 .problema {
     margin: 7rem 0 0 2rem;
@@ -653,6 +667,24 @@ footer img{
         display: block;
     }
 
+    .box-login-mobile{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .login-mobile {
+        width: 100%;
+        height: 4rem;
+        font-size: 2.5rem;
+        border-radius: 1.2rem;
+        border: 2px solid white;
+        color: white;
+        cursor: pointer;
+        background-color: #0000008c;
+        font-weight: bold;
+    }
+
     .menu-mobile a {
         color: white;
         text-decoration: none;
@@ -686,7 +718,6 @@ footer img{
         gap: 1rem;
         cursor: pointer;
     }
-
 }
 
 
