--- a/css/style.css
+++ b/css/style.css
@@ -226,10 +226,10 @@ header {
     margin-right: 1rem;
     z-index: 9;
     position: relative;
-    left: 68rem;
-    bottom: 3rem;
-
+    left: 65rem;
+    bottom: 3.5rem;
 }
+
 #label-tema{
     background-color: black;
     border-radius: 40%;
@@ -286,19 +286,21 @@ main {
 }
 
 .btn-projeto {
-    font-size: 2rem;
     margin-top: 10rem;
 }
 
-.btn-projeto a {
+.btn-projeto button {
+    font-size: 2rem;
     color: var(--cor-texto-fundo-preto);
     text-decoration: none;
     padding: 1.5rem;
     background-color: rgba(0, 0, 0, 0.541);
     border-radius: 3rem;
+    border: 0;
+    cursor: pointer;
 }
 
-.btn-projeto a:hover {
+.btn-projeto button:hover {
     background-color: black;
     font-size: 2.2rem;
     transition: 0.2s;
@@ -853,6 +855,11 @@ footer img{
         gap: 1rem;
         cursor: pointer;
     }
+
+    .tema{
+        left: 20rem;
+        bottom: 1.5rem;
+    }
 }
 
 
@@ -1044,6 +1051,11 @@ footer img{
     .problema {
         margin-top: -18rem;
     }
+
+    .tema{
+        left: 15rem;
+
+    }
 }
 
 
@@ -1122,6 +1134,11 @@ footer img{
         grid-row: 5;
         margin-top: -12rem;
     }
+
+    .tema{
+        left: 10rem;
+
+    }
 }
 
 
@@ -1129,7 +1146,7 @@ footer img{
 @media screen and (max-width: 768px) {
     .btn-projeto{
         position: relative;
-        top: 7.2rem;
+        top: 6rem;
     }
 
     .container-demonstracao h1{
@@ -1139,6 +1156,9 @@ footer img{
 
     .container-demonstracao h2{
         width: 40rem;
+    }
+    .tema{
+        left: 5rem;
     }
 }
 
@@ -1236,7 +1256,14 @@ footer img{
     .btn-projeto{
         top: 2rem;
     }
+
+    .tema{
+        left: 2rem;
+
+    }
 }
+
+
 
 @media screen and (max-width: 524px) {
     .container-grid {
