--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ header {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    background-color: #3a3a3a;
+    background-color: #1d1d1b;
     color: white;
     border-radius: 2rem;
     box-shadow: rgba(0, 0, 0, 0.541) 1rem 1rem;
@@ -188,7 +188,7 @@ header {
     width: 400px;
     height: 40px;
     border-radius: 30px;
-    background-color: black;
+    background-color: rgb(90, 90, 90);
     color: white;
     border: none;
     outline: none;
